--- a/clusters/home/cert-manager/namespace.yml
+++ b/clusters/home/cert-manager/namespace.yml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 resources:
-- clusters/home/flux-system/namespace.yml
+- clusters/home/flux-system/namespace.yaml
