--- a/clusters/home/cert-manager/namespace.yml
+++ b/clusters/home/cert-manager/namespace.yml
@@ -1,5 +1,4 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-namespace: cert-manager
-resources:
-- ../flux-system/namespace.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cert-manager
