--- a/clusters/home/nginx/ingress.yml
+++ b/clusters/home/nginx/ingress.yml
@@ -10,12 +10,12 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`www.nginx.local.example.com`)
+    - match: Host(`nginx.guslabsathome.com`)
       kind: Rule
       services:
         - name: nginx
           port: 80
-    - match: Host(`nginx.local.example.com`)
+    - match: Host(`nginx.guslabsathome.com`)
       kind: Rule
       services:
         - name: nginx
@@ -23,4 +23,4 @@ spec:
       middlewares:
         - name: default-headers
   tls:
-    secretName: local-example-com-tls
+    secretName: widlcard-crt
