--- a/clusters/home/cert-manager/release.yml
+++ b/clusters/home/cert-manager/release.yml
@@ -15,7 +15,7 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
-    installCRDs: true
+    installCRDs: false
     replicaCount: 2
     extraArgs:
       - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
